--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -11,12 +11,14 @@
 /* === navegacion === */
 .navegacion .top-bar .menu a {
 	color: #666666;
-	font-weight: bold; }
+	font-weight: bold;
+	text-transform: uppercase; }
 .navegacion .top-bar .top-bar-right img {
 	opacity: 0; }
 /* === identidad === */
 .efecto {
 	background: white;
+	cursor: pointer;
 	max-height: 350px; }
 .efecto img {
 	opacity: 0.25;
@@ -69,10 +71,16 @@
 /* === testimonios === */
 .testimonios, .testimonios.orbit {
 	background-color: #006bb1; }
+.testimonios .orbit-container {
+	height: auto !important;
+	overflow: visible; }
 .testimonios h3, .testimonios blockquote, .testimonios cite, .testimonios p {
 	color: white; }
-.testimonios h3, .testimonios img {
-	margin-top: 3rem; }
+.testimonios p {
+	margin-bottom: 0; }
+.testimonios h3 {
+	margin-top: 3rem;
+	margin-bottom: 3rem; }
 .testimonios .orbit-bullets {
 	padding: 2.5rem;
 	margin-bottom: 0; }
@@ -95,13 +103,42 @@
 .footer .menu.social a {
 	padding-bottom: 0;
 	padding-top: 0; }
-/* === disclaimer */
+/* === disclaimer === */
 .disclaimer {
 	background-color: #f1f1f1; }
 .disclaimer p {
 	font-size: 0.75rem;
 	padding-top: 1rem;
 	color: #666666; }
+/* === contacto offscreen === */
+.container-fluid {
+	position: fixed;
+	z-index: 99999999999999999999;
+	background-color: white;
+	border: 2px solid #FEBE10; }
+.container-fluid .click {
+	background-color: #FEBE10;
+	cursor: pointer;
+	font-weight: bold;
+	position: absolute;
+	top: 50%;
+	left: -111px;
+	padding: 1rem;
+	border-radius: 3px 3px 3px 3px;
+	-ms-transform: rotate(270deg); /* IE 9 */
+    -webkit-transform: rotate(270deg); /* Chrome, Safari, Opera */
+    transform: rotate(270deg); }
+.visible {
+	width: 650px;
+	z-index: 99999999999999999999;
+	top: 2rem;
+	right: 0px;
+	transition:All 0.5s ease;
+	-webkit-transition:All 0.5s ease;
+	-moz-transition:All 0.5s ease;
+	-o-transition:All 0.5s ease; }
+.invisible2 {
+	right:-648px; }
 /* ============================= */
 /* ! Layout for mobile version   */
 /* ============================= */
