--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -74,6 +74,8 @@
 .testimonios .orbit-container {
 	height: auto !important;
 	overflow: visible; }
+.testimonios .orbit-container li {
+	max-height: none !important; }
 .testimonios h3, .testimonios blockquote, .testimonios cite, .testimonios p {
 	color: white; }
 .testimonios p {
@@ -139,6 +141,19 @@
 	-o-transition:All 0.5s ease; }
 .invisible2 {
 	right:-648px; }
+/* === contenido === */
+.contenido .meta {
+	color: #999999;
+	font-size: 0.75rem;
+	margin-bottom: 1.5rem; }
+.contenido p, .contenido h1, .contenido h2, .contenido h3, .contenido h4, .contenido h5, .contenido h6 {
+	color: #333333; }
+.mascara img {
+	border-radius: 400px !important;
+	-moz-border-radius: 400px !important;
+	-webkit-border-radius: 400px !important;
+	-khtml-border-radius: 400px !important;
+	overflow: hidden; }
 /* ============================= */
 /* ! Layout for mobile version   */
 /* ============================= */
