--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -12,6 +12,7 @@
 /* === navegacion === */
 .navegacion .top-bar .menu a {
 	color: #666666;
+	font-size: 0.8rem;
 	font-weight: bold;
 	text-transform: uppercase; }
 .navegacion .top-bar .top-bar-right img {
@@ -102,7 +103,8 @@
 	background-color: #006bb1; }
 .testimonios .orbit-container {
 	height: auto !important;
-	overflow: visible; }
+	overflow: visible;
+	padding-bottom: 2rem; }
 .testimonios .orbit-container li {
 	max-height: none !important; }
 .testimonios h3, .testimonios blockquote, .testimonios cite, .testimonios p {
@@ -111,10 +113,19 @@
 	margin-bottom: 0; }
 .testimonios h3 {
 	margin-top: 3rem;
-	margin-bottom: 3rem; }
+	margin-bottom: 2rem; }
 .testimonios .orbit-bullets {
-	padding: 2.5rem;
-	margin-bottom: 0; }
+	padding-top: 0;
+	margin-bottom: 0;
+	margin-top: 0; }
+.testimonios .orbit-bullets button {
+	opacity: 0.5;
+	height: auto;
+	width: auto; }
+.testimonios .orbit-bullets button.is-active {
+	opacity: 1; }
+.testimonios .orbit-bullets button.is-active span:last-child {
+	display: none; }
 /* === footer === */
 .footer {
 	background-image: url("../img/img3.jpg");
@@ -146,14 +157,18 @@
 	position: fixed;
 	z-index: 99999999999999999999;
 	background-color: white;
-	border: 2px solid #FEBE10; }
+	border: 2px solid #006BB1; }
+	.container-fluid .header-pestana {
+		padding-top: 2rem; }
+	/* #006BB1 */
 .container-fluid .click {
-	background-color: #FEBE10;
+	background-color: #006BB1;
 	cursor: pointer;
 	font-weight: bold;
 	position: absolute;
+	color: white;
 	top: 50%;
-	left: -111px;
+	left: -115px;
 	padding: 1rem;
 	border-radius: 3px 3px 3px 3px;
 	-ms-transform: rotate(270deg); /* IE 9 */
@@ -171,6 +186,13 @@
 .invisible2 {
 	right:-648px; }
 /* === contenido === */
+.sub-navegacion .menu {
+	margin-bottom: 2rem; }
+.sub-navegacion .menu li a {
+	font-size: 1.5rem;
+	border-bottom: 1px solid #2199e8; }
+.sub-navegacion .menu li.current-menu-item {
+	border-bottom: 5px solid #2199e8; }
 .contenido .meta {
 	color: #999999;
 	font-size: 0.75rem;
